# ioexpander_emulator

doc/: spi_transaction.sal
fw/: .gitignore  README.md
fw/.west/: config
fw/app/: CMakeLists.txt  app.overlay  prj.conf  west.yml
fw/app/src/: ipi.c  ipi.h  main.c  main.cpp  rvmn_spi.h
fw/app/src/config/: erpc_config.h
fw/app/src/erpc/port/: erpc_port_zephyr.cpp  erpc_threading.h  erpc_threading_zephyr.cpp
fw/app/src/erpc/setup/: erpc_setup_zephyr_usb_cdc.cpp
fw/app/src/erpc/transport/: erpc_zephyr_usb_cdc_transport.cpp  erpc_zephyr_usb_cdc_transport.hpp
pc/: .gitignore  Pipfile  README.md
pc/src/: ioxp_emu.py  main.py  rvmc.py
pc/src/can/: listener.py  rvc.py
shared/: interface.erpc
